--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
 {
   "name": "e-commerce-api",
   "version": "1.0.0",
-  "main": "setup.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +16,10 @@
     "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^4.19.2",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.0",
+    "mongoose": "^8.12.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6"
