--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node src/app.js",
     "dev": "nodemon app.js"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "mongoose": "^8.12.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "serverless-http": "^4.0.0"
   }
 }
