--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "razorpay": "^2.9.6",
+    "resend": "^6.6.0",
     "serverless-http": "^4.0.0"
   }
 }
